# simframe

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  frame.py  meson.build  pyproject.toml  requirements.txt  setup.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: codeql-analysis.yml  python-package.yml  unit_tests.yml
docs/: requirements.txt
docs/source/: 1_simple_integration.ipynb  2_advanced integration.ipynb  2_advanced_integration.ipynb  3_custom_schemes.ipynb  3_updating.ipynb  4_custom_schemes.ipynb  5_adaptive_schemes.ipynb  6_implicit_integration.ipynb  7_coupled_oscillators.ipynb  B_contrib_bug_feature.ipynb  C_changelog.ipynb  api.rst  conf.py  example_compartmental_models.ipynb  example_coupled_oscillators.ipynb  example_double_pendulum.ipynb  example_nbody.ipynb  index.rst
examples/: 1_simple_integration.ipynb  2_advanced integration.ipynb  2_advanced_integration.ipynb  3_costum_schemes.ipynb  3_custom_schemes.ipynb  3_updating.ipynb  4_custom_schemes.ipynb  5_adaptive_schemes.ipynb  6_implicit_integration.ipynb  7_coupled_oscillators.ipynb  7_coupled_oscillators_binder.ipynb  A_citation.ipynb  B_contrib_bug_feature.ipynb  C_changelog.ipynb  example_compartmental_models.ipynb  example_coupled_oscillators.ipynb  example_double_pendulum.ipynb  example_nbody.ipynb  temp.ipynb  test.ipynb  test2.ipynb
paper/joss/: paper.bib  paper.md
simframe/: __init__.py  frame.py  integration.py  io.py  meson.build
simframe/frame/: field.py  (+8 more)
simframe/integration/schemes/: __init__.py  expl_1_euler.py  expl_2_fehlberg_adptv.py  expl_2_heun.py  expl_2_heun_euler_adptv.py  expl_2_midpoint.py  expl_2_ralston.py  expl_3_bogacki_shampine_adptv.py  expl_3_gottlieb_shu_adptv.py  expl_3_heun.py  expl_3_kutta.py  expl_3_ralston.py  expl_3_ssprk.py  expl_4_38rule.py  expl_4_ralston.py  expl_4_runge_kutta.py  expl_4_rungekutta.py  expl_5_cash_karp_adptv.py  expl_5_dormand_prince_adptv.py  impl_1_euler_direct.py  impl_1_euler_gmres.py  impl_2_midpoint_direct.py  meson.build  update.py
test/: test_field.py  test_frame.py  test_group.py  test_scheme.py  test_updater_class.py  test_writer.py
tests/: test_adaptive.py  test_simple.py
(+58 files in other folders)
