python_sources = [
    '__init__.py',
    'expl_1_euler.py',
    'expl_2_fehlberg_adptv.py',
    'expl_2_heun_euler_adptv.py',
    'expl_2_heun.py',
    'expl_2_midpoint.py',
    'expl_2_ralston.py',
    'expl_3_bogacki_shampine_adptv.py',
    'expl_3_gottlieb_shu_adptv.py',
    'expl_3_heun.py',
    'expl_3_kutta.py',
    'expl_3_ralston.py',
    'expl_3_ssprk.py',
    'expl_4_38rule.py',
    'expl_4_ralston.py',
    'expl_4_runge_kutta.py',
    'expl_5_cash_karp_adptv.py',
    'expl_5_dormand_prince_adptv.py',
    'impl_1_euler_direct.py',
    'impl_1_euler_gmres.py',
    'impl_2_midpoint_direct.py',
    'update.py',
]
py3.install_sources(python_sources, subdir: 'simframe/integration/schemes')